--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Profile-Photo1.png"
+  avatar           : "profile_picture.JPG"
   name             : "Luke Fisher"
   pronouns         : # example: "she/her"  
   bio              : "Economics Student"
