--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/Luke_Fisher_Resume_2025.pdf
     
   # - title: "Guide"
   #   url: /markdown/
